antlr4/uebMathParser.java
// Generated from uebMathParser.g4 by ANTLR 4.9.2
 package org.dotlessbraille.antlr4; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class uebMathParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STARTING_MODE=1, START_NUMERIC_MODE=2, START_NUMERIC_PASSAGE=3, G1PassageInd=4, 
		G1WordInd=5, CapsPassageInd=6, CapsWordInd=7, CapitalLetter=8, MODIF=9, 
		SPLOW=10, LOWCON=11, ILC5=12, ILC45=13, ILC456=14, FLC46=15, FLC56=16, 
		STRONG_WS=17, STRONG_GS=18, APOS_END=19, APOS_UC_END=20, BINOP=21, MLSQRTO=22, 
		MLSQRTC=23, OGROUP=24, CGROUP=25, MLFRACS=26, MLFRACIL=27, MLFRACE=28, 
		MLSUB=29, MLSUP=30, MLROWS=31, MLROWE=32, SPACED_SYMBOLS=33, COMP_SYMBOLS=34, 
		LEFTangleOrLT=35, RIGHTangleOrGT=36, PR_TOKEN=37, COMMA_ROOT=38, DOT4=39, 
		DOT5=40, DOT6=41, DOTS45=42, DOTS56=43, DOTS46=44, DOTS456=45, DOT2=46, 
		DOTS23=47, DOTS25=48, DOTS256=49, DOTS235=50, DOTS2356=51, DOTS236=52, 
		DOTS356=53, DOTS26=54, DOTS35=55, ROOT=56, PERIOD_ROOT=57, SLASH_ROOT=58, 
		AND_ROOT=59, FOR_ROOT=60, OF_ROOT=61, THE_ROOT=62, WITH_ROOT=63, CapsTermInd=64, 
		G1SymInd=65, G1TermInd=66, SFB=67, CHSF=68, SHSF=69, SFCC=70, STSF=71, 
		OURSELVES=72, THSF=73, ERSF=74, ONESELF=75, THMSLVS=76, CONCV=77, ALPHA_SEQ=78, 
		LETTERA=79, LETTERB=80, UPDIGS=81, LETTERK=82, MOST_LETTERS=83, DOTS34=84, 
		DOTS36=85, DOTS126=86, DOTS345=87, DOTS346=88, DOT3=89, DOTS146=90, DOTS156=91, 
		OForFRACS=92, THE=93, WITHorFRCE=94, DOTS16=95, DOTS1456=96, DOTS1256=97, 
		DOTS12456=98, DOTS246=99, DOTS1246=100, INDENT=101, SPACE=102, NEWLINE=103, 
		MISC=104, EXIT_NUMERIC_PASSAGE=105, LETTERS_NOT_DIGITS=106, LETTER_NOT_DIGIT=107, 
		DIGITS=108, NP_NEWLINE=109, NUMERIC_LABEL=110, SIMPLE_FRACTION_LINE=111, 
		MFRACS=112, MFRACIL=113, MFRACE=114, NPSPACE=115, NPNEWLINE=116, COMMENT=117, 
		NP_PR_TOKEN_1=118, NP_ROOT=119, NP_MISC=120, NUM_SIMPLE_FRAC_LINEx=121, 
		NUM_CONT_NUM_SPACE=122, NUM_CONT=123, NUM_SPACE_DIGIT=124, NDIG_SEQ=125, 
		NUM_SIMPLE_FRAC_LINE=126, END_NM_with_FRACE=127, END_NM_with_G1=128, END_NM_with_G1TERM=129, 
		END_NM_with_SPACE=130, END_NM_with_WINNL=131, END_NM_with_DASH=132, END_NM_with_HYPHEN=133, 
		END_NM_with_ALPHA=134, END_NM_with_K2Z=135, NM_FRACE=136, NMFRACIL=137, 
		PR_TOKEN_1=138, PR_TOKEN_2=139, PR_TOKEN_3=140, ROOT_1=141, NUM_MISC=142, 
		END_SPECG1_with_G1TERM=143, ANOTHER_SPACE=144, CAP_ZED=145, LATIN_LETTER=146, 
		FUN_NAME=147, SHORTFORM=148, SFA=149, SFC=150;
	public static final int
		RULE_text = 0, RULE_lineStart = 1, RULE_lineMiddle = 2, RULE_lineEnd = 3, 
		RULE_lineDone = 4, RULE_line = 5, RULE_strong_ws = 6, RULE_digits = 7, 
		RULE_lowsigncon = 8, RULE_lowAlone = 9, RULE_standingAlone = 10, RULE_flc = 11, 
		RULE_ilc = 12, RULE_strong_gs = 13, RULE_largeSign = 14, RULE_newline = 15, 
		RULE_space = 16, RULE_indent = 17, RULE_separator = 18, RULE_trailingSep = 19, 
		RULE_thismode = 20, RULE_startMode = 21, RULE_endMode = 22, RULE_binop = 23, 
		RULE_numIndicator = 24, RULE_simpleFraction = 25, RULE_frac = 26, RULE_item = 27, 
		RULE_angleBracket = 28, RULE_compSymbols = 29, RULE_comp = 30, RULE_tcAlphaSeq = 31, 
		RULE_alphaSeq = 32, RULE_comma = 33, RULE_simpleWord = 34, RULE_ff = 35, 
		RULE_word = 36, RULE_wordStart = 37, RULE_wordMiddle = 38, RULE_wordEnding = 39, 
		RULE_flcERROR = 40, RULE_expr2 = 41, RULE_oGroup = 42, RULE_cGroup = 43, 
		RULE_g1MathRoots = 44, RULE_fracStart = 45, RULE_fracEnd = 46, RULE_fracLine = 47, 
		RULE_mLsub = 48, RULE_mLsup = 49, RULE_brlogrp = 50, RULE_brlcgrp = 51, 
		RULE_supExpr = 52, RULE_subsupExpr = 53, RULE_subExpr = 54, RULE_cfrac = 55, 
		RULE_numModeItem = 56, RULE_numModeContent = 57, RULE_g1WrdOrPssg = 58, 
		RULE_g1TERM = 59, RULE_numericPassage = 60, RULE_endNumPassage = 61, RULE_hyphen = 62, 
		RULE_dash = 63, RULE_long_dash = 64, RULE_shortForms = 65, RULE_justALetter = 66, 
		RULE_singleLetter = 67, RULE_ucLetters = 68, RULE_saLetters = 69, RULE_standAloneCon = 70, 
		RULE_preNoQuotes = 71, RULE_preLow = 72, RULE_preAlone = 73, RULE_postOk = 74, 
		RULE_postAlone = 75, RULE_oops = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"text", "lineStart", "lineMiddle", "lineEnd", "lineDone", "line", "strong_ws", 
			"digits", "lowsigncon", "lowAlone", "standingAlone", "flc", "ilc", "strong_gs", 
			"largeSign", "newline", "space", "indent", "separator", "trailingSep", 
			"thismode", "startMode", "endMode", "binop", "numIndicator", "simpleFraction", 
			"frac", "item", "angleBracket", "compSymbols", "comp", "tcAlphaSeq", 
			"alphaSeq", "comma", "simpleWord", "ff", "word", "wordStart", "wordMiddle", 
			"wordEnding", "flcERROR", "expr2", "oGroup", "cGroup", "g1MathRoots", 
			"fracStart", "fracEnd", "fracLine", "mLsub", "mLsup", "brlogrp", "brlcgrp", 
			"supExpr", "subsupExpr", "subExpr", "cfrac", "numModeItem", "numModeContent", 
			"g1WrdOrPssg", "g1TERM", "numericPassage", "endNumPassage", "hyphen", 
			"dash", "long_dash", "shortForms", "justALetter", "singleLetter", "ucLetters", 
			"saLetters", "standAloneCon", "preNoQuotes", "preLow", "preAlone", "postOk", 
			"postAlone", "oops"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'Z'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STARTING_MODE", "START_NUMERIC_MODE", "START_NUMERIC_PASSAGE", 
			"G1PassageInd", "G1WordInd", "CapsPassageInd", "CapsWordInd", "CapitalLetter", 
			"MODIF", "SPLOW", "LOWCON", "ILC5", "ILC45", "ILC456", "FLC46", "FLC56", 
			"STRONG_WS", "STRONG_GS", "APOS_END", "APOS_UC_END", "BINOP", "MLSQRTO", 
			"MLSQRTC", "OGROUP", "CGROUP", "MLFRACS", "MLFRACIL", "MLFRACE", "MLSUB", 
			"MLSUP", "MLROWS", "MLROWE", "SPACED_SYMBOLS", "COMP_SYMBOLS", "LEFTangleOrLT", 
			"RIGHTangleOrGT", "PR_TOKEN", "COMMA_ROOT", "DOT4", "DOT5", "DOT6", "DOTS45", 
			"DOTS56", "DOTS46", "DOTS456", "DOT2", "DOTS23", "DOTS25", "DOTS256", 
			"DOTS235", "DOTS2356", "DOTS236", "DOTS356", "DOTS26", "DOTS35", "ROOT", 
			"PERIOD_ROOT", "SLASH_ROOT", "AND_ROOT", "FOR_ROOT", "OF_ROOT", "THE_ROOT", 
			"WITH_ROOT", "CapsTermInd", "G1SymInd", "G1TermInd", "SFB", "CHSF", "SHSF", 
			"SFCC", "STSF", "OURSELVES", "THSF", "ERSF", "ONESELF", "THMSLVS", "CONCV", 
			"ALPHA_SEQ", "LETTERA", "LETTERB", "UPDIGS", "LETTERK", "MOST_LETTERS", 
			"DOTS34", "DOTS36", "DOTS126", "DOTS345", "DOTS346", "DOT3", "DOTS146", 
			"DOTS156", "OForFRACS", "THE", "WITHorFRCE", "DOTS16", "DOTS1456", "DOTS1256", 
			"DOTS12456", "DOTS246", "DOTS1246", "INDENT", "SPACE", "NEWLINE", "MISC", 
			"EXIT_NUMERIC_PASSAGE", "LETTERS_NOT_DIGITS", "LETTER_NOT_DIGIT", "DIGITS", 
			"NP_NEWLINE", "NUMERIC_LABEL", "SIMPLE_FRACTION_LINE", "MFRACS", "MFRACIL", 
			"MFRACE", "NPSPACE", "NPNEWLINE", "COMMENT", "NP_PR_TOKEN_1", "NP_ROOT", 
			"NP_MISC", "NUM_SIMPLE_FRAC_LINEx", "NUM_CONT_NUM_SPACE", "NUM_CONT", 
			"NUM_SPACE_DIGIT", "NDIG_SEQ", "NUM_SIMPLE_FRAC_LINE", "END_NM_with_FRACE", 
			"END_NM_with_G1", "END_NM_with_G1TERM", "END_NM_with_SPACE", "END_NM_with_WINNL", 
			"END_NM_with_DASH", "END_NM_with_HYPHEN", "END_NM_with_ALPHA", "END_NM_with_K2Z", 
			"NM_FRACE", "NMFRACIL", "PR_TOKEN_1", "PR_TOKEN_2", "PR_TOKEN_3", "ROOT_1", 
			"NUM_MISC", "END_SPECG1_with_G1TERM", "ANOTHER_SPACE", "CAP_ZED", "LATIN_LETTER", 
			"FUN_NAME", "SHORTFORM", "SFA", "SFC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "uebMathParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	 boolean line_cont = false;
	                  boolean numericMode = false;
	                  boolean specialG1Mode = false;
	                  boolean g1Wrd = false;
	                  boolean g1Passage = false;
	                  boolean g1WrdOrPassage = false;
	                  boolean numPassage = false; 
	                 
	public uebMathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TextContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof uebMathParserListener ) ((uebMathParserListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof uebMathParserListener ) ((uebMathParserListener)listener).exitText(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_text);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(154);
					line();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(157); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineStartContext extends ParserRuleContext {
		public LowAloneContext lowAlone() {
			return getRuleContext(LowAloneContext.class,0);
		}
		public List<SpaceContext> space() {
			return getRuleContexts(SpaceContext.class);
		}
		public SpaceContext space(int i) {
			return getRuleContext(SpaceContext.class,i);
		}
		public List<IndentContext> indent() {
			return getRuleContexts(IndentContext.class);
		}
		public IndentContext indent(int i) {
			return getRuleContext(IndentContext.class,i);
		}
		public SimpleWordContext simpleWord() {
			return getRuleContext(SimpleWordContext.class,0);
		}
		public WordContext word() {
			return getRuleContext(WordContext.class,0);
		}
		public StandingAloneContext standingAlone() {
			return getRuleContext(StandingAloneContext.class,0);
		}
		public ItemContext item() {
			return getRuleContext(ItemContext.class,0);
		}
		public List<SeparatorContext> separator() {
			return getRuleContexts(SeparatorContext.class);
		}
		public SeparatorContext separator(int i) {
			return getRuleContext(SeparatorContext.class,i);
		}
		public List<G1WrdOrPssgContext> g1WrdOrPssg() {
			return getRuleContexts(G1WrdOrPssgContext.class);
		}
		public G1WrdOrPssgContext g1WrdOrPssg(int i) {
			return getRuleContext(G1WrdOrPssgContext.class,i);
		}
		public LineStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineStart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof uebMathParserListener ) ((uebMathParserListener)listener).enterLineStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof uebMathParserListener ) ((uebMathParserListener)listener).exitLineStart(this);
		}
	}

	public final LineStartContext lineStart() throws RecognitionException {
		LineStartContext _localctx = new LineStartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lineStart);
		int _la;
		try {
			int _alt;
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 101)) & ~0x3f) == 0 && ((1L << (_la - 101)) & ((1L << (INDENT - 101)) | (1L << (SPACE - 101)) | (1L << (NPSPACE - 101)) | (1L << (END_NM_with_SPACE - 101)))) != 0)) {
					{
					setState(161);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SPACE:
					case NPSPACE:
					case END_NM_with_SPACE:
						{
						setState(159);
						space();
						}
						break;
					case INDENT:
						{
						setState(160);
						indent();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				lowAlone();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(171);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(169);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case DOT5:
						case DOT6:
						case DOTS36:
						case INDENT:
						case SPACE:
						case NPSPACE:
						case END_NM_with_SPACE:
						case END_NM_with_DASH:
						case END_NM_with_HYPHEN:
							{
							setState(167);
							separator();
							}
							break;
						case G1PassageInd:
						case G1WordInd:
							{
							setState(168);
							g1WrdOrPssg();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(173);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(178);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(174);
					simpleWord();
					}
					break;
				case 2:
					{
					setState(175);
					word();
					}
					break;
				case 3:
					{
					setState(176);
					standingAlone();
					}
					break;
				case 4:
					{
					setState(177);
					item();
					}
					break;
				}
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
